--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="KidneyRGB">
     <meta property="og:type" content="website">
-    <link rel="canonical" href="https://kidney.nicepage.io/">
+    <link rel="canonical" href="https://m3dkata.github.io/kidneyrgb/">
   
 </head>
   <body class="u-body u-xl-mode" data-lang="en">
@@ -736,7 +736,7 @@
       </div>
       <div class="u-align-left u-clearfix u-sheet u-sheet-1">
         <h1 class="u-custom-font u-text u-text-palette-2-base u-title u-text-1">KidneyRGB</h1>
-        <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="./index_files/kidneyyy.webp" alt="" data-image-width="203" data-image-height="224">
+        <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="./kidneyyy.webp" alt="" data-image-width="203" data-image-height="224">
       </div>
     </section>
     <section class="u-align-center-xs u-clearfix u-palette-2-base u-valign-middle-sm u-section-3" id="carousel_2a9d">
